--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">12.91</td>
+  
+
+<td class="col-md-4">2.85</td>
+  
+
+<td class="col-md-5">3.00</td>
+  
+
+<td class="col-md-6">1.17</td>
+  
+
+<td class="col-md-7">1.00</td>
+  
+
+<td class="col-md-8">2.33</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
