--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">5.60</td>
+  
+
+<td class="col-md-4">3.80</td>
+  
+
+<td class="col-md-5">3.60</td>
+  
+
+<td class="col-md-6">2.91</td>
+  
+
+<td class="col-md-7">3.19</td>
+  
+
+<td class="col-md-8">0.53</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
