--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SNAP</td>
+    
+<td class="col-md-3">18.80</td>
+  
+
+<td class="col-md-4">1.38</td>
+  
+
+<td class="col-md-5">2.44</td>
+  
+
+<td class="col-md-6">4.50</td>
+  
+
+<td class="col-md-7">2.60</td>
+  
+
+<td class="col-md-8">0.86</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
