--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">5.60</td>
+<td class="col-md-3">5.59</td>
   
 
 <td class="col-md-4">1.40</td>
   
 
-<td class="col-md-5">1.15</td>
+<td class="col-md-5">1.13</td>
   
 
-<td class="col-md-6">0.79</td>
+<td class="col-md-6">0.81</td>
   
 
 <td class="col-md-7">1.00</td>
   
 
-<td class="col-md-8">1.62</td>
+<td class="col-md-8">1.86</td>
   
 
 <td class="col-md-9">1.00</td>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">SNAP</td>
+    <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">18.80</td>
+<td class="col-md-3">12.88</td>
   
 
-<td class="col-md-4">1.38</td>
+<td class="col-md-4">3.00</td>
   
 
-<td class="col-md-5">2.44</td>
+<td class="col-md-5">2.45</td>
   
 
-<td class="col-md-6">4.50</td>
+<td class="col-md-6">1.61</td>
   
 
-<td class="col-md-7">2.60</td>
+<td class="col-md-7">0.67</td>
   
 
-<td class="col-md-8">0.86</td>
+<td class="col-md-8">1.43</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
