--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">12.92</td>
+  
+
+<td class="col-md-4">3.06</td>
+  
+
+<td class="col-md-5">2.37</td>
+  
+
+<td class="col-md-6">1.59</td>
+  
+
+<td class="col-md-7">0.76</td>
+  
+
+<td class="col-md-8">1.71</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
