--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">NBEV</td>
     
-<td class="col-md-3">5.19</td>
+<td class="col-md-3">10.85</td>
   
 
-<td class="col-md-4">1.41</td>
+<td class="col-md-4">4.06</td>
   
 
-<td class="col-md-5">1.17</td>
+<td class="col-md-5">2.93</td>
   
 
-<td class="col-md-6">0.97</td>
+<td class="col-md-6">0.83</td>
   
 
-<td class="col-md-7">1.52</td>
+<td class="col-md-7">1.86</td>
   
 
-<td class="col-md-8">1.33</td>
+<td class="col-md-8">1.25</td>
   
 
 <td class="col-md-9">0.33</td>
