--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">NIO</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">11.89</td>
+<td class="col-md-3">5.24</td>
   
 
-<td class="col-md-4">3.46</td>
+<td class="col-md-4">3.58</td>
   
 
-<td class="col-md-5">2.45</td>
+<td class="col-md-5">4.61</td>
   
 
-<td class="col-md-6">1.57</td>
+<td class="col-md-6">0.93</td>
   
 
-<td class="col-md-7">2.14</td>
+<td class="col-md-7">0.76</td>
   
 
-<td class="col-md-8">0.53</td>
+<td class="col-md-8">1.12</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.80</td>
   
 s
 </tr>
