--- a/index.html
+++ b/index.html
@@ -59,13 +59,42 @@
 <td class="col-md-6">0.91</td>
   
 
-<td class="col-md-7">0.79</td>
+<td class="col-md-7">0.72</td>
   
 
-<td class="col-md-8">1.12</td>
+<td class="col-md-8">1.29</td>
   
 
 <td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">11.79</td>
+  
+
+<td class="col-md-4">3.49</td>
+  
+
+<td class="col-md-5">2.50</td>
+  
+
+<td class="col-md-6">1.50</td>
+  
+
+<td class="col-md-7">2.00</td>
+  
+
+<td class="col-md-8">0.86</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
