--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">4.97</td>
+  
+
+<td class="col-md-4">1.38</td>
+  
+
+<td class="col-md-5">1.13</td>
+  
+
+<td class="col-md-6">0.95</td>
+  
+
+<td class="col-md-7">0.86</td>
+  
+
+<td class="col-md-8">1.43</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
