--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">4.91</td>
+  
+
+<td class="col-md-4">1.38</td>
+  
+
+<td class="col-md-5">1.03</td>
+  
+
+<td class="col-md-6">1.08</td>
+  
+
+<td class="col-md-7">0.78</td>
+  
+
+<td class="col-md-8">1.83</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
