--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">5.00</td>
+  
+
+<td class="col-md-4">3.28</td>
+  
+
+<td class="col-md-5">3.72</td>
+  
+
+<td class="col-md-6">0.54</td>
+  
+
+<td class="col-md-7">1.53</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
