--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">4.97</td>
+  
+
+<td class="col-md-4">3.02</td>
+  
+
+<td class="col-md-5">3.86</td>
+  
+
+<td class="col-md-6">0.58</td>
+  
+
+<td class="col-md-7">1.73</td>
+  
+
+<td class="col-md-8">4.67</td>
+  
+
+<td class="col-md-9">0.20</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
