--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <td class="col-md-5">1.60</td>
   
 
-<td class="col-md-6">0.98</td>
+<td class="col-md-6">0.94</td>
   
 
 <td class="col-md-7">0.26</td>
@@ -66,6 +66,35 @@
   
 
 <td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">4.60</td>
+  
+
+<td class="col-md-4">1.38</td>
+  
+
+<td class="col-md-5">1.02</td>
+  
+
+<td class="col-md-6">1.07</td>
+  
+
+<td class="col-md-7">1.45</td>
+  
+
+<td class="col-md-8">1.13</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
