--- a/index.html
+++ b/index.html
@@ -91,10 +91,39 @@ s
 <td class="col-md-7">1.25</td>
   
 
-<td class="col-md-8">0.53</td>
+<td class="col-md-8">0.57</td>
   
 
 <td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">INTC</td>
+    
+<td class="col-md-3">5.47</td>
+  
+
+<td class="col-md-4">1.92</td>
+  
+
+<td class="col-md-5">3.33</td>
+  
+
+<td class="col-md-6">0.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
