--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">4.54</td>
+<td class="col-md-3">4.79</td>
   
 
-<td class="col-md-4">1.38</td>
+<td class="col-md-4">2.50</td>
   
 
-<td class="col-md-5">1.01</td>
+<td class="col-md-5">2.87</td>
   
 
-<td class="col-md-6">1.19</td>
+<td class="col-md-6">0.70</td>
   
 
-<td class="col-md-7">1.29</td>
+<td class="col-md-7">1.30</td>
   
 
-<td class="col-md-8">0.52</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -94,7 +94,7 @@ s
 <td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
