--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <td class="col-md-4">2.69</td>
   
 
-<td class="col-md-5">1.63</td>
+<td class="col-md-5">1.59</td>
   
 
-<td class="col-md-6">0.56</td>
+<td class="col-md-6">0.57</td>
   
 
 <td class="col-md-7">1.11</td>
@@ -65,7 +65,7 @@
 <td class="col-md-8">1.83</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.60</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">NBEV</td>
     
-<td class="col-md-3">4.46</td>
+<td class="col-md-3">9.15</td>
   
 
-<td class="col-md-4">1.41</td>
+<td class="col-md-4">5.56</td>
   
 
-<td class="col-md-5">1.03</td>
+<td class="col-md-5">1.43</td>
   
 
-<td class="col-md-6">1.14</td>
+<td class="col-md-6">2.31</td>
   
 
-<td class="col-md-7">1.61</td>
+<td class="col-md-7">1.85</td>
   
 
-<td class="col-md-8">1.06</td>
+<td class="col-md-8">1.75</td>
   
 
-<td class="col-md-9">0.86</td>
+<td class="col-md-9">2.25</td>
   
 s
 </tr>
@@ -103,27 +103,27 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">INTC</td>
+    <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">6.00</td>
+<td class="col-md-3">4.46</td>
   
 
-<td class="col-md-4">2.75</td>
+<td class="col-md-4">1.42</td>
   
 
-<td class="col-md-5">6.67</td>
+<td class="col-md-5">1.05</td>
   
 
-<td class="col-md-6">0.00</td>
+<td class="col-md-6">1.17</td>
   
 
-<td class="col-md-7">0.00</td>
+<td class="col-md-7">1.90</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">1.53</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
