--- a/index.html
+++ b/index.html
@@ -85,16 +85,45 @@ s
 <td class="col-md-5">2.94</td>
   
 
-<td class="col-md-6">3.17</td>
+<td class="col-md-6">3.00</td>
   
 
-<td class="col-md-7">5.91</td>
+<td class="col-md-7">6.50</td>
   
 
-<td class="col-md-8">1.27</td>
+<td class="col-md-8">1.23</td>
   
 
-<td class="col-md-9">2.25</td>
+<td class="col-md-9">0.86</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">4.26</td>
+  
+
+<td class="col-md-4">1.45</td>
+  
+
+<td class="col-md-5">1.24</td>
+  
+
+<td class="col-md-6">1.54</td>
+  
+
+<td class="col-md-7">1.45</td>
+  
+
+<td class="col-md-8">0.82</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
