--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">NBEV</td>
     
-<td class="col-md-3">8.28</td>
+<td class="col-md-3">8.29</td>
   
 
-<td class="col-md-4">8.44</td>
+<td class="col-md-4">8.50</td>
   
 
-<td class="col-md-5">2.97</td>
+<td class="col-md-5">2.89</td>
   
 
-<td class="col-md-6">3.04</td>
+<td class="col-md-6">3.21</td>
   
 
-<td class="col-md-7">6.60</td>
+<td class="col-md-7">6.00</td>
   
 
-<td class="col-md-8">1.29</td>
+<td class="col-md-8">1.13</td>
   
 
-<td class="col-md-9">0.44</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">4.25</td>
   
 
-<td class="col-md-4">1.44</td>
+<td class="col-md-4">1.45</td>
   
 
-<td class="col-md-5">1.25</td>
+<td class="col-md-5">1.26</td>
   
 
-<td class="col-md-6">1.56</td>
+<td class="col-md-6">1.57</td>
   
 
-<td class="col-md-7">1.42</td>
+<td class="col-md-7">1.39</td>
   
 
-<td class="col-md-8">0.78</td>
+<td class="col-md-8">0.75</td>
   
 
 <td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">2.35</td>
+  
+
+<td class="col-md-4">2.00</td>
+  
+
+<td class="col-md-5">1.26</td>
+  
+
+<td class="col-md-6">2.43</td>
+  
+
+<td class="col-md-7">0.42</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
