--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">8.09</td>
+  
+
+<td class="col-md-4">9.50</td>
+  
+
+<td class="col-md-5">3.22</td>
+  
+
+<td class="col-md-6">4.52</td>
+  
+
+<td class="col-md-7">2.39</td>
+  
+
+<td class="col-md-8">0.56</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
