--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">4.19</td>
+  
+
+<td class="col-md-4">1.45</td>
+  
+
+<td class="col-md-5">1.42</td>
+  
+
+<td class="col-md-6">1.51</td>
+  
+
+<td class="col-md-7">1.03</td>
+  
+
+<td class="col-md-8">1.18</td>
+  
+
+<td class="col-md-9">0.71</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
