--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">10.45</td>
+<td class="col-md-3">10.46</td>
   
 
-<td class="col-md-4">2.88</td>
+<td class="col-md-4">2.86</td>
   
 
-<td class="col-md-5">1.22</td>
+<td class="col-md-5">1.18</td>
   
 
-<td class="col-md-6">1.14</td>
+<td class="col-md-6">1.21</td>
   
 
-<td class="col-md-7">1.11</td>
+<td class="col-md-7">1.15</td>
   
 
-<td class="col-md-8">2.14</td>
+<td class="col-md-8">2.29</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">4.09</td>
+  
+
+<td class="col-md-4">1.44</td>
+  
+
+<td class="col-md-5">1.41</td>
+  
+
+<td class="col-md-6">1.58</td>
+  
+
+<td class="col-md-7">0.92</td>
+  
+
+<td class="col-md-8">0.79</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
