--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">6.85</td>
+  
+
+<td class="col-md-4">10.72</td>
+  
+
+<td class="col-md-5">3.33</td>
+  
+
+<td class="col-md-6">4.20</td>
+  
+
+<td class="col-md-7">0.38</td>
+  
+
+<td class="col-md-8">1.11</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
