--- a/index.html
+++ b/index.html
@@ -56,16 +56,45 @@
 <td class="col-md-5">3.33</td>
   
 
-<td class="col-md-6">3.48</td>
+<td class="col-md-6">2.94</td>
   
 
-<td class="col-md-7">0.38</td>
+<td class="col-md-7">0.41</td>
   
 
 <td class="col-md-8">1.25</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.17</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">BABA</td>
+    
+<td class="col-md-3">5.59</td>
+  
+
+<td class="col-md-4">3.31</td>
+  
+
+<td class="col-md-5">1.71</td>
+  
+
+<td class="col-md-6">0.78</td>
+  
+
+<td class="col-md-7">1.10</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
