--- a/index.html
+++ b/index.html
@@ -53,16 +53,45 @@
 <td class="col-md-4">1.44</td>
   
 
-<td class="col-md-5">1.37</td>
+<td class="col-md-5">1.34</td>
   
 
-<td class="col-md-6">1.33</td>
+<td class="col-md-6">1.35</td>
   
 
-<td class="col-md-7">0.98</td>
+<td class="col-md-7">0.95</td>
   
 
-<td class="col-md-8">1.08</td>
+<td class="col-md-8">0.56</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">BABA</td>
+    
+<td class="col-md-3">5.67</td>
+  
+
+<td class="col-md-4">3.44</td>
+  
+
+<td class="col-md-5">1.76</td>
+  
+
+<td class="col-md-6">0.96</td>
+  
+
+<td class="col-md-7">1.78</td>
+  
+
+<td class="col-md-8">0.00</td>
   
 
 <td class="col-md-9">1.00</td>
