--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">3.67</td>
   
 
-<td class="col-md-5">1.93</td>
+<td class="col-md-5">1.84</td>
   
 
-<td class="col-md-6">1.23</td>
+<td class="col-md-6">1.28</td>
   
 
-<td class="col-md-7">2.56</td>
+<td class="col-md-7">2.20</td>
   
 
-<td class="col-md-8">4.25</td>
+<td class="col-md-8">2.50</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">NIO</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">10.33</td>
+<td class="col-md-3">3.56</td>
   
 
-<td class="col-md-4">3.09</td>
+<td class="col-md-4">1.93</td>
   
 
-<td class="col-md-5">1.11</td>
+<td class="col-md-5">1.07</td>
   
 
-<td class="col-md-6">1.63</td>
+<td class="col-md-6">1.10</td>
   
 
-<td class="col-md-7">2.18</td>
+<td class="col-md-7">1.56</td>
   
 
-<td class="col-md-8">2.30</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">3.00</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
