--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">BABA</td>
     
-<td class="col-md-3">5.69</td>
+<td class="col-md-3">5.70</td>
   
 
-<td class="col-md-4">3.67</td>
+<td class="col-md-4">3.69</td>
   
 
-<td class="col-md-5">1.84</td>
+<td class="col-md-5">1.87</td>
   
 
-<td class="col-md-6">1.28</td>
+<td class="col-md-6">1.23</td>
   
 
-<td class="col-md-7">2.20</td>
+<td class="col-md-7">2.56</td>
   
 
-<td class="col-md-8">2.50</td>
+<td class="col-md-8">2.14</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AAPL</td>
+    <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">3.56</td>
+<td class="col-md-3">10.33</td>
   
 
-<td class="col-md-4">1.93</td>
+<td class="col-md-4">3.09</td>
   
 
-<td class="col-md-5">1.07</td>
+<td class="col-md-5">1.02</td>
   
 
-<td class="col-md-6">1.10</td>
+<td class="col-md-6">1.77</td>
   
 
-<td class="col-md-7">1.56</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.80</td>
   
 s
 </tr>
