--- a/index.html
+++ b/index.html
@@ -62,10 +62,68 @@
 <td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">1.29</td>
+<td class="col-md-8">1.38</td>
   
 
 <td class="col-md-9">1.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">3.87</td>
+  
+
+<td class="col-md-4">1.44</td>
+  
+
+<td class="col-md-5">1.38</td>
+  
+
+<td class="col-md-6">0.93</td>
+  
+
+<td class="col-md-7">0.65</td>
+  
+
+<td class="col-md-8">1.27</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">BABA</td>
+    
+<td class="col-md-3">5.77</td>
+  
+
+<td class="col-md-4">4.00</td>
+  
+
+<td class="col-md-5">1.63</td>
+  
+
+<td class="col-md-6">1.82</td>
+  
+
+<td class="col-md-7">4.71</td>
+  
+
+<td class="col-md-8">1.21</td>
+  
+
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
