--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">10.27</td>
+<td class="col-md-3">10.28</td>
   
 
-<td class="col-md-4">3.33</td>
+<td class="col-md-4">3.35</td>
   
 
-<td class="col-md-5">1.08</td>
+<td class="col-md-5">1.11</td>
   
 
-<td class="col-md-6">2.30</td>
+<td class="col-md-6">2.18</td>
   
 
-<td class="col-md-7">1.74</td>
+<td class="col-md-7">1.93</td>
   
 
-<td class="col-md-8">1.11</td>
+<td class="col-md-8">1.28</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">BABA</td>
+    <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">5.82</td>
+<td class="col-md-3">3.80</td>
   
 
-<td class="col-md-4">4.28</td>
+<td class="col-md-4">1.44</td>
   
 
-<td class="col-md-5">1.87</td>
+<td class="col-md-5">1.48</td>
   
 
-<td class="col-md-6">1.96</td>
+<td class="col-md-6">0.89</td>
   
 
-<td class="col-md-7">8.40</td>
+<td class="col-md-7">0.69</td>
   
 
-<td class="col-md-8">1.06</td>
+<td class="col-md-8">0.93</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.17</td>
   
 s
 </tr>
