--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 <td class="col-md-6">2.18</td>
   
 
-<td class="col-md-7">1.93</td>
+<td class="col-md-7">1.83</td>
   
 
-<td class="col-md-8">1.28</td>
+<td class="col-md-8">1.35</td>
   
 
 <td class="col-md-9">0.75</td>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">BABA</td>
+    
+<td class="col-md-3">5.82</td>
+  
+
+<td class="col-md-4">4.28</td>
+  
+
+<td class="col-md-5">1.87</td>
+  
+
+<td class="col-md-6">1.96</td>
+  
+
+<td class="col-md-7">8.40</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">TSLA</td>
     
 <td class="col-md-3">3.80</td>
@@ -82,16 +111,16 @@ s
 <td class="col-md-4">1.44</td>
   
 
-<td class="col-md-5">1.48</td>
+<td class="col-md-5">1.44</td>
   
 
-<td class="col-md-6">0.89</td>
+<td class="col-md-6">0.91</td>
   
 
-<td class="col-md-7">0.69</td>
+<td class="col-md-7">0.63</td>
   
 
-<td class="col-md-8">0.93</td>
+<td class="col-md-8">0.80</td>
   
 
 <td class="col-md-9">0.17</td>
