--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">3.68</td>
   
 
-<td class="col-md-4">1.47</td>
+<td class="col-md-4">1.46</td>
   
 
-<td class="col-md-5">1.63</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">0.96</td>
+<td class="col-md-6">0.95</td>
   
 
-<td class="col-md-7">0.91</td>
+<td class="col-md-7">0.93</td>
   
 
 <td class="col-md-8">1.47</td>
   
 
-<td class="col-md-9">0.57</td>
+<td class="col-md-9">0.60</td>
   
 s
 </tr>
@@ -82,7 +82,7 @@ s
 <td class="col-md-4">13.22</td>
   
 
-<td class="col-md-5">4.38</td>
+<td class="col-md-5">4.47</td>
   
 
 <td class="col-md-6">0.71</td>
@@ -91,10 +91,39 @@ s
 <td class="col-md-7">1.68</td>
   
 
-<td class="col-md-8">1.31</td>
+<td class="col-md-8">1.14</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.20</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">10.50</td>
+  
+
+<td class="col-md-4">3.58</td>
+  
+
+<td class="col-md-5">1.41</td>
+  
+
+<td class="col-md-6">2.21</td>
+  
+
+<td class="col-md-7">1.60</td>
+  
+
+<td class="col-md-8">0.79</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
