--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <td class="col-md-4">4.62</td>
   
 
-<td class="col-md-5">1.86</td>
+<td class="col-md-5">1.80</td>
   
 
-<td class="col-md-6">3.21</td>
+<td class="col-md-6">3.39</td>
   
 
 <td class="col-md-7">0.97</td>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">NIO</td>
+    <td class="col-md-2">W</td>
     
-<td class="col-md-3">10.49</td>
+<td class="col-md-3">2.74</td>
   
 
-<td class="col-md-4">3.64</td>
+<td class="col-md-4">2.32</td>
   
 
-<td class="col-md-5">1.48</td>
+<td class="col-md-5">1.74</td>
   
 
-<td class="col-md-6">2.16</td>
+<td class="col-md-6">1.54</td>
   
 
-<td class="col-md-7">1.16</td>
+<td class="col-md-7">1.22</td>
   
 
-<td class="col-md-8">0.50</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
