--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">1.46</td>
   
 
-<td class="col-md-5">1.45</td>
+<td class="col-md-5">1.47</td>
   
 
-<td class="col-md-6">0.76</td>
+<td class="col-md-6">0.78</td>
   
 
-<td class="col-md-7">1.27</td>
+<td class="col-md-7">1.32</td>
   
 
-<td class="col-md-8">0.90</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.14</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">5.96</td>
+  
+
+<td class="col-md-4">13.94</td>
+  
+
+<td class="col-md-5">4.18</td>
+  
+
+<td class="col-md-6">0.69</td>
+  
+
+<td class="col-md-7">1.43</td>
+  
+
+<td class="col-md-8">0.79</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">NIO</td>
     
 <td class="col-md-3">10.46</td>
@@ -82,19 +111,19 @@ s
 <td class="col-md-4">3.70</td>
   
 
-<td class="col-md-5">1.62</td>
+<td class="col-md-5">1.64</td>
   
 
 <td class="col-md-6">1.84</td>
   
 
-<td class="col-md-7">1.02</td>
+<td class="col-md-7">0.91</td>
   
 
-<td class="col-md-8">0.87</td>
+<td class="col-md-8">0.65</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
