--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">3.50</td>
+<td class="col-md-3">3.49</td>
   
 
 <td class="col-md-4">1.48</td>
@@ -56,16 +56,45 @@
 <td class="col-md-5">1.57</td>
   
 
-<td class="col-md-6">0.83</td>
+<td class="col-md-6">0.82</td>
   
 
-<td class="col-md-7">1.64</td>
+<td class="col-md-7">1.62</td>
   
 
 <td class="col-md-8">1.53</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.27</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">10.49</td>
+  
+
+<td class="col-md-4">3.74</td>
+  
+
+<td class="col-md-5">1.66</td>
+  
+
+<td class="col-md-6">1.73</td>
+  
+
+<td class="col-md-7">0.89</td>
+  
+
+<td class="col-md-8">0.92</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
