--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">1.47</td>
   
 
-<td class="col-md-5">1.56</td>
+<td class="col-md-5">1.54</td>
   
 
-<td class="col-md-6">0.78</td>
+<td class="col-md-6">0.79</td>
   
 
-<td class="col-md-7">1.68</td>
+<td class="col-md-7">1.61</td>
   
 
-<td class="col-md-8">1.67</td>
+<td class="col-md-8">1.60</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
@@ -76,25 +76,54 @@ s
     <td class="col-md-1">2</td>
     <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">10.41</td>
+<td class="col-md-3">10.34</td>
   
 
-<td class="col-md-4">3.75</td>
+<td class="col-md-4">3.76</td>
   
 
-<td class="col-md-5">1.67</td>
+<td class="col-md-5">1.69</td>
   
 
-<td class="col-md-6">1.75</td>
+<td class="col-md-6">1.77</td>
   
 
-<td class="col-md-7">0.84</td>
+<td class="col-md-7">0.86</td>
   
 
-<td class="col-md-8">0.86</td>
+<td class="col-md-8">1.08</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">1.80</td>
+  
+
+<td class="col-md-4">1.15</td>
+  
+
+<td class="col-md-5">4.20</td>
+  
+
+<td class="col-md-6">2.00</td>
+  
+
+<td class="col-md-7">1.80</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
