--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">3.45</td>
+  
+
+<td class="col-md-4">1.47</td>
+  
+
+<td class="col-md-5">1.60</td>
+  
+
+<td class="col-md-6">0.83</td>
+  
+
+<td class="col-md-7">1.62</td>
+  
+
+<td class="col-md-8">1.10</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
