--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">3.74</td>
   
 
-<td class="col-md-5">1.58</td>
+<td class="col-md-5">1.60</td>
   
 
 <td class="col-md-6">1.71</td>
   
 
-<td class="col-md-7">0.63</td>
+<td class="col-md-7">0.61</td>
   
 
-<td class="col-md-8">1.25</td>
+<td class="col-md-8">1.08</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
@@ -82,19 +82,48 @@ s
 <td class="col-md-4">1.49</td>
   
 
-<td class="col-md-5">1.51</td>
+<td class="col-md-5">1.46</td>
   
 
-<td class="col-md-6">0.97</td>
+<td class="col-md-6">1.01</td>
   
 
-<td class="col-md-7">1.46</td>
+<td class="col-md-7">1.53</td>
   
 
 <td class="col-md-8">0.85</td>
   
 
-<td class="col-md-9">0.83</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">5.77</td>
+  
+
+<td class="col-md-4">13.58</td>
+  
+
+<td class="col-md-5">3.00</td>
+  
+
+<td class="col-md-6">0.71</td>
+  
+
+<td class="col-md-7">0.69</td>
+  
+
+<td class="col-md-8">0.64</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
