--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">3.34</td>
+<td class="col-md-3">3.35</td>
   
 
 <td class="col-md-4">1.50</td>
   
 
-<td class="col-md-5">1.40</td>
+<td class="col-md-5">1.38</td>
   
 
-<td class="col-md-6">1.08</td>
+<td class="col-md-6">1.10</td>
   
 
-<td class="col-md-7">1.31</td>
+<td class="col-md-7">1.38</td>
   
 
 <td class="col-md-8">1.09</td>
   
 
-<td class="col-md-9">0.12</td>
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.87</td>
+  
+
+<td class="col-md-4">1.89</td>
+  
+
+<td class="col-md-5">1.26</td>
+  
+
+<td class="col-md-6">0.86</td>
+  
+
+<td class="col-md-7">1.27</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
