--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">3.35</td>
   
 
-<td class="col-md-4">1.50</td>
+<td class="col-md-4">1.49</td>
   
 
-<td class="col-md-5">1.37</td>
+<td class="col-md-5">1.39</td>
   
 
-<td class="col-md-6">1.12</td>
+<td class="col-md-6">1.11</td>
   
 
-<td class="col-md-7">1.29</td>
+<td class="col-md-7">1.33</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">0.81</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.88</td>
+  
+
+<td class="col-md-4">1.90</td>
+  
+
+<td class="col-md-5">1.31</td>
+  
+
+<td class="col-md-6">0.90</td>
+  
+
+<td class="col-md-7">1.17</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
